# hl2ss

./: .gitignore  README.md  pyproject.toml
extensions/client_cpp/: CMakeLists.txt  hl2ss_ulm.h  main.cpp  main_ulm.cpp
hl2ss_ros/: CMakeLists.txt  package.xml  setup.py
hl2ss_ros/config/: VLC_LF_transforms.txt  VLC_RF_transforms.txt  aprilgrid_3x2_50mm_tagsize.yaml  aprilgrid_4x3_50mm_tagsize.yaml  hlvlc_rf.yaml  kalibr_4x3_arl2_run.sh  vlc_left_front_apriltag_data.txt  vlc_left_front_calibration_data.yaml  vlc_right_front_apriltag_data.txt  vlc_right_front_calibration_data.yaml  vlc_right_front_raw_data.m
hl2ss_ros/config/NRG3/: cal_nrg3_vlc_leftfront.yaml  cal_nrg3_vlc_rightfront.yaml  vlc_left_left_calibration_data.yaml  vlc_right_right_calibration_data.yaml
hl2ss_ros/config/NRG3/camera_intrinsics/: 2025.03.17_v1_pinhole-radtan_3289-camchain.yaml  2025.03.17_v1_pinhole-radtan_3289-results-cam.txt  cal_nrg3_vlc_leftfront.yaml  cal_nrg3_vlc_rightfront.yaml
hl2ss_ros/config/NRG3/eye_in_hand/: nrg3_LF_cal_data_100.m  nrg3_LF_cal_data_100.txt  nrg3_LF_cal_data_100_inv.txt  nrg3_LF_cal_data_100_raw.txt  nrg3_LF_cal_data_v1.txt  nrg3_LF_cal_data_v2.txt  nrg3_RF_cal_data_100.m  nrg3_RF_cal_data_100.txt  nrg3_RF_cal_data_100_inv.txt  nrg3_RF_cal_data_100_raw.txt  nrg3_RF_cal_data_100_raw_A.m
hl2ss_ros/config/NRG3/eye_in_hand/archieved/: nrg3_LF_cal_data_all.m  nrg3_LF_cal_data_v1.m  nrg3_LF_cal_data_v2.m  nrg3_LF_cal_data_v3.m  nrg3_LF_cal_data_v3.txt
hl2ss_ros/config/NRG3/eye_in_hand/data/: nrg3_LF_cal_data_100_inv.txt  nrg3_LF_cal_data_100_inv_A.m  nrg3_LF_cal_data_100_raw.txt  nrg3_LF_cal_data_100_raw_A.m  nrg3_RF_cal_data_100_inv.txt  nrg3_RF_cal_data_100_inv_A.m  nrg3_RF_cal_data_100_raw.txt
hl2ss_ros/config/NRG3/eye_in_hand/scripts/: eye_in_hand_cal.py
hl2ss_ros/config/NRG3/eye_in_hand/verification/: nrg3_baselink_to_rignode_data.m  nrg3_baselink_to_rignode_data.txt  nrg3_baselink_to_rignode_data_inv.m  nrg3_baselink_to_rignode_data_inv.txt
hl2ss_ros/config/april_tag/: settings.yaml  tags.yaml
hl2ss_ros/launch/: april_tag_continuous_detection.launch  cacti_dataset_collection.launch  cal_eye_in_hand_data_collect.launch  hololens_agent.launch  hololens_all_vlc.launch  hololens_covins_frontend.launch  hololens_imu.launch  hololens_multi_sensor_streamer.launch  hololens_odom.launch  hololens_si.launch  hololens_si_imu.launch  hololens_static_tf.launch  hololens_vlc.launch  hololens_vlc_all.launch  hololens_vlc_multi_sync.launch  hololens_vlc_uv_to_3d.launch
hl2ss_ros/scripts/: cacti_dataset_stream_writer.py  cacti_test.py  cal_eye_in_hand_data_collect.py  calibration_user_input.py  camera_info_pub.py  client_stream_rm_vlc.py  client_stream_rm_vlc_multi.py  client_stream_si.py  client_stream_si_imu.py  hololens_odom_pub.py  hololens_pose_pub.py  hololens_static_tf_pub.py  hololens_vlc_multi_sync_pub.py  hololens_vlc_pub.py  pose_to_path.py  sample_uv_to_3d_vlc.py  si_to_odom_pub.py  tf_republisher.py  tf_static_publishers.py  write_mic_stream.py  write_microphone_stream.py  write_vlc_stream.py
hl2ss_ros/src/: camera_info_publisher.cpp  text.txt
hl2ss_ros2/: docker-build.sh  docker-run.sh  docker-shell.sh  docker-stop.sh
hl2ss_ros2/Docker/: Dockerfile  bash_utils.sh  docker-compose.yaml  entrypoint.sh
viewer/: __init__.py  client_ipc_su.py  client_ipc_umq.py  client_stream_pv.py  client_stream_rm_imu.py  client_stream_rm_vlc.py  hl2ss.py  hl2ss_3dcv.py  hl2ss_io.py  hl2ss_mt.py  hl2ss_utilities.py  sample_2d_to_3d_segmentation_rm_vlc.py  sample_integrator_pv.py  sample_integrator_rm_vlc.py  sample_si_rm_vlc.py  sample_uv_to_3d_vlc.py  sample_uv_to_3d_vlc_viewer.py  sample_video.py  sample_video_writer.py  simple_recorder.py
