[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viewer"
version = "0.1.0"
description = "A viewer package for HoloLens 2 Sensor Streaming"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
# authors = [
#     {name = "Your Name", email = "your.email@example.com"}
# ]

dependencies = [
    "numpy",
    "opencv-python",
    "av",
    "pynput",
    "open3d",
    "pyaudio"
]

[project.urls]
# "Homepage" = "https://github.com/yourusername/hl2ss"
# "Bug Tracker" = "https://github.com/yourusername/hl2ss/issues"

[tool.setuptools]
packages = ["viewer"]

# [tool.setuptools.package-data]
# viewer = ["*.py"]
